# WinEspExceptionDecoder

./: .gitignore  README.md  pyproject.toml  setup.bat  setup.sh  start.bat  start.sh
src/winespexceptiondecoder/: __init__.py  analysis.py  config.py  decoder.py  gui.py  main.py  models.py  parser.py
tests/: test_analysis.py  test_decoder.py  test_parser.py
