[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "WinEspExceptionDecoder"
version = "0.1.0"
description = "Standalone ESP8266/ESP32 exception decoder with a Tkinter GUI."
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Andre Lorbach", email = "alorbach@adiscon.com" }]
dependencies = []

[project.scripts]
winespexceptiondecoder = "winespexceptiondecoder.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
